test/compare/sources/fixedbugs/issue219_2.go
// errorcheck

package main

func main() {
	append = 30 // ERROR `use of builtin append not in function call`
}
